@@ -25,6 +25,7 @@ ChangeLog
 [-] * Fix possible race condition in searching.
 [-] * Fixed invoking of CMake with output to custom directory.
 [-] * Compile on platforms where ssize_t does not exist.
+[-] * Fix detection of towlower on some compilers.
 
 20081119 - 1.21.92
 
